# annota

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.flatpak/: cargo.sh  meson.sh  rust-analyzer.sh
.github/workflows/: ci.yml
build-aux/: com.Azakidev.Annota.Devel.json  com.Azakidev.Annota.json  com.Azakidev.TestApp.Devel.json
data/: com.Azakidev.Annota.desktop.in.in  com.Azakidev.Annota.gschema.xml.in  com.Azakidev.Annota.metainfo.xml.in.in  com.Azakidev.TestApp.desktop.in.in  com.Azakidev.TestApp.gschema.xml.in  com.Azakidev.TestApp.metainfo.xml.in.in
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/ui/: shortcuts.blp  window.blp  window.ui
po/: POTFILES.in
src/: application.rs  main.rs  window.rs
src/ui/: mod.rs  window.rs
