[package]
name = "annota"
version = "0.1.0"
authors = ["Azakidev <zazaguichi@outlook.com>"]
edition = "2021"

[dependencies]
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"]}
adw ={ version = "0.5", package = "libadwaita", features = ["v1_3"]}
ashpd = { version = "0.5" }
sourceview5 = "0.7"

gettext-rs = { version = "0.7", features = ["gettext-system"] }
log = "0.4"
once_cell = "1.14"
pretty_env_logger = "0.5"
url = "2.4"
string-join = "0.1"